--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
         </div>
         <div class="intro">
             <h1 class="intro__title">
-                <span class="intro__title-pre">On-Scroll</span>
-                <span class="intro__title-sub">Typography Animations</span>
+                <span class="intro__title-pre">Scrolling</span>
+                <span class="intro__title-sub">probando</span>
             </h1>
             <span class="intro__info">Please scroll moderately to fully experience the animations</span>
         </div>
